--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </video>
         </div>
         <div class="header__logo-box-1">
-            <!-- <img src="./server/img/avropa ittifaqi5.png" alt="Logo" class=" logo-1">
-            <img src="./server/img/EU4GE_Logos-1.png" alt="Logo" class=" logo-2"> -->
-            <!-- <img src="./server/img/EU4GE_Logos-2.png" alt="Logo" class=" logo-3"> -->
-            <!-- <img src="./server/img/NRYTN logo AZ .png" alt="Logo" class="logo-4"> -->
+            <!-- <img src="./server/img/avropa ittifaqi5.png" alt="Logo" class=" logo-1"> -->
+            <!-- <img src="./server/img/EU4GE_Logos-1.png" alt="Logo" class=" logo-2"> -->
+            <img src="./server/img/tehsil nazirliyi.png" alt="Logo" class=" logo-3">
+            <img src="./server/img/Gənclər_və_İdman_Nazirliyi_logo.svg.png" alt="Logo" class="logo-4">
             <img src="./server/img/komkte logo.png" alt="Logo" class="logo-7">
             <img src="./server/img/RIIB_logo_RGB.png" alt="Logo" class=" logo-5">
         </div>
@@ -482,86 +482,71 @@
 
                     <!-- q1 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbir online yoxsa offline olacaq və hansı
-                            platforma üzərindən təşkil olunacaq? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbir online yoxsa offline olacaq və hansı platforma üzərindən təşkil olunacaq ? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Bütün infossesiyalar, təlimlər və hakatonun özü online formatda müxtəlif
-                        platformalar (ZOOM, Discord, FaceBook) üzərindən təşkil olunacaq. Platformların idarə olunması,
-                        vaxtlar və hansı tədbirin harada olacağı barədə öncədən tədbirin facebook səhifəsində məlumat
-                        paylaşılacaq.
+                        &nbsp; &#9658; Tədbir offline formatında, Heydər Əliyev Mərkəzində keçiriləcəkdir.
                     </p>
                     <br>
                     <!-- q2 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Komanda üzvləri kimlər olmalıdır? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbirə hazırlıq üçün təlimlər harada keçiriləcəkdir? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Komandalar müxtəlif sahələr üzrə (dizayn, informasiya texnologiyaları, biznesin
-                        idarə olunması və s.) bilik və bacarıqlara sahib 3-5 nəfərdən təşkil olunmalıdır.
+                        &nbsp; &#9658; Bütün təlimlər online formatda ZOOM üzərindən təşkil olunacaq. Platformların idarə olunması, vaxtlar və hansı tədbirin harada olacağı barədə öncədən tədbirin facebook səhifəsində məlumat paylaşılacaq.
                     </p>
                     <br>
                     <!-- q3 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Hakatonda iştirak üçün texnoloji biliklərin
-                            olması mütləqdirmi? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbirdə hansı regionlardan qatılmaq olar? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Bəli, hakatonda iştirak edən komandanın üzvlərindən ən azı birinin texnoloji
-                        bilikləri olmalıdır. Hakatonun keçirilməsində məqsəd gender bərabərliyinin təmin olunmasına
-                        yönəlik texnoloji həllərin yaradılmasını dəstəkləməkdir.
+                        &nbsp; &#9658; Tədbirə bütün ölkədən qatılmaq olar. Lakin tədbir günləri fiziki olaraq tədbirin keçiriləcəyi məkanda olmaq şərtdir.
                     </p>
                     <br>
                     <!-- q4 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Hər komanda üzvü qeydiyyatdan ayrı-ayrılıqda
-                            keçməlidir? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b>  Komanda üzvləri kimlər olacaq? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; İlkin mərhələdə komandanın hər bir üzvü ayrı-ayrılıqda qeydiyyatdan keçməlidir.
-                        Komandası olmayan şəxslər də individual şəkildə qeydiyyatdan keçə bilər.
-                        Seçim mərhələsindən keçmiş, lakin komandasız müraciət etmiş şəxslər də təlimlərə cəlb olunacaq.
-                        Təlimlərdən sonra həmin şəxslər üçün komandalar formalaşdırılacaq və yaxud müxtəlif komandalara
-                        əlavə olunacaqlar.
+                        &nbsp; &#9658; Komanda 4 nəfərdən ibarət 10-17 yaş aralığında olan uşaqlardan ibarət olacaqdır.
 
                     </p>
                     <br>
                     <!-- q5    -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Hakatonun proqramı hansı müddəti əhatə edir?
+                        <span style='font-size:22px;'>&#8226;</span> <b> Hakatonda iştirak üçün texnoloji biliklərin olması mütləqdirmi?
                         </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Hakatonun proqramı qeydiyyat, hazırlıq mərhələsi və yekun tədbirdən ibarət
-                        olmaqla 3 mərhələdən ibarətdir. Ümumi proqramın icrası 3 ay müddətinə (dekabr 2020 – fevral
-                        2021) nəzərdə tutulmuşdur.
-                        Hakaton bitdikdən sonra qalib ideyaların reallaşdırılmasına dəstək göstəriləcəkdir.
+                        &nbsp; &#9658; Xeyr, bu biliklərə Hakatona hazırlıq mərhələsində, tədbirdən 2 ay öncə təlimlər vasitəsi ilə yiyələnəcəklər. Hakatonun keçirilməsində məqsəd uşaq hüquqlarının təşviqi sahəsində texnoloji həllərin yaradılmasının dəstəklənməsidir.
 
                     </p>
                     <br>
                     <!-- q6 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Mükafatlandırma necə olacaq? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Hakatonun proqramı hansı müddəti əhatə edir? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Münsiflər heyətinin qiymətləndirilməsi əsasında seçilmiş birinci yerin qalibi
-                        5000 manat, ikinci yerin qalibi 3000 manat, üçüncü yerin qalibi isə 1000 manat məbləğində
-                        mükafat qazanacaq. Bundan başqa qalib kimi seçilməyən, lakin maraqlı olan ideya ilə çıxış edən
-                        komandalar da müxtəlif hədiyyələrlə təltif olunacaq.
+                        &nbsp; &#9658; Hakatonun proqramı qeydiyyat, hazırlıq mərhələsi və yekun tədbirdən ibarət olmaqla 3 mərhələdən ibarətdir. Ümumi proqramın icrası 4 ay müddətinə ( avqust 2021 – noyabr 2021) nəzərdə tutulmuşdur.
                     </p>
                     <br>
                     <!-- q7 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Təlim müddətində nə tədris ediləcək? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Mükafatlandırma necə olacaq? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; İştirakçılar ilkin olaraq gender bərabərliyi üzrə təlimlərə qoşulacaqlar. Təlim
-                        iştirakçıları gender problemlərinin aradan qaldırılmasına yönəlik texnoloji həllərin yaradılması
-                        üçün tələb olunan müvafiq texniki biliklərə yiyələnəcəklər.
+                        &nbsp; &#9658; Münsiflər heyətinin qiymətləndirilməsi əsasında seçilmiş birinci yerin qalibi olan komanda üzvləri kompyuter, ikinci yerin qalibləri planşet, üçüncü yerin qalibləri isə ağıllı saat qazanacaqlar. Bundan başqa qalib kimi seçilməyən, lakin maraqlı olan ideya ilə çıxış edən komandalar da müxtəlif hədiyyələrlə təltif olunacaq.
 
-                        Bundan əlavə, iştirakçılara startap sahibkarlığı və yeni məhsulun yaradılması üzrə təlimlər
-                        keçiriləcək. Təlimlər real təcrübələrə əsaslanmaqla müvəffəqiyyətli sahibkarlar tərəfindən
-                        aparılacaq.
+                    </p>
+                    <br>
+
+                     <!-- q8 -->
+                     <p class="paragraph">
+                        <span style='font-size:22px;'>&#8226;</span> <b> Təlim müddətində nə tədris ediləcək?? </b>
+                    </p>
+                    <p class="paragraph">
+                        &nbsp; &#9658; İştirakçılar ilkin olaraq uşaq hüquqları üzrə təlimlərə qoşulacaqlar. Növbəti mərhələdə iştirakçıların bir hissəsi kodlaşdırma və dizayn, digər hissəsi isə biznes idarəetmə və biznes münasibətləri üzrə təlimlərdə iştirak edəcəklər. Bununla da, iştirakçılar uşaq hüquqlarının təşviqi sahəsində texnoloji həllərin yaradılması üçün tələb olunan müvafiq texniki biliklərə yiyələnəcəklər.
 
                     </p>
                 </div>
