--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </li> -->
                 <li class="navigation__item"><a href="#8" class="navigation__link" onclick="clickMenu()">&nbsp;&nbsp;
                         &nbsp; &nbsp;FAQ &nbsp; &nbsp; &nbsp; &nbsp; </a></li>
-                <li class="navigation__item"><a href="#9" class="navigation__link" onclick="clickMenu()">Bizimlə
-                        Əlaqə</a></li>
+                <!-- <li class="navigation__item"><a href="#9" class="navigation__link" onclick="clickMenu()">Bizimlə
+                        Əlaqə</a></li> -->
 
             </ul>
         </nav>
@@ -78,9 +78,9 @@
                 </span>
 
 
-                <span class="heading-primary--sub">“Uşaq Hüquqları” Hakatonu Keçiriləcəyi tarixlər: 20-21 noyabr, 2021
+                <span class="heading-primary--sub">Hakaton tarixləri: 20-21 noyabr, 2021
 
-                    <span id="15" class="heading-primary--sub"> Qeydiyyat tarixləri: 15 avqust - 15 sentyabr, 2021</span>
+                    <span id="15" class="heading-primary--sub"> Son qeydiyyat tarixi:15 sentyabr, 2021</span>
             </h1>
             <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank"
                 class="btn btn--white btn--animated u-margin-right ">Qeydİyyatdan keç</a>
@@ -116,7 +116,7 @@
                     </p> -->
 
                     <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank"
-                        class="btn-text u-margin-bottom-small">Tədbirə qoşul&rarr;</a>
+                        class="btn-text u-margin-bottom-small">Hakatona qatıl&rarr;</a>
 
                 </div>
                 <div class="col-1-of-2">
@@ -318,7 +318,7 @@
                 </div>
             </div>
             <div class="u-center-text u-margin-top-huge">
-                <a href="https://forms.gle/Q1rbmmErtttf8Myo8" class="btn-text">Qeydiyyatdan keç&rarr;</a>
+                <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank" class="btn-text">Qeydiyyatdan keç&rarr;</a>
             </div>
         </section>
 
@@ -341,7 +341,7 @@
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-compass  "></i>
-                    <h3 class="heading-tertiary ">Hüquq təlİmlərİ</h3>
+                    <h3 class="heading-tertiary ">Uşaq hüquqları üzrə təlimlər</h3>
                     <p class="feature-box__text">15 sentyabr - 15 oktyabr, 2021</p>
                 </div>
                 <div class="feature-box">
@@ -352,7 +352,7 @@
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
-                    <h3 class="heading-tertiary ">Hakatonun açılış mərasimi</h3>
+                    <h3 class="heading-tertiary ">Komandalarla görüş</h3>
                     <p class="feature-box__text">19 noyabr, 2021.</p>
                 </div>
                 <div class="feature-box">
