--- a/index.html
+++ b/index.html
@@ -374,26 +374,32 @@
             <div class="row">
 
 
-                <div class="col-1-of-3">
+                <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
-                        <img src="./server/img/NRYTN logo AZ .png" alt="Person on a tour" class="story__img tranform">
+                        <img src="./server/img/tehsil nazirliyi.png" alt="Person on a tour" class="story__img tranform">
                     </div>
                 </div>
 
-                <div class="col-1-of-3">
+          
+                <div class="col-1-of-4">
+                    <div class="story d-flex-col-1 ">
+                        <img src="./server/img/Gənclər_və_İdman_Nazirliyi_logo.svg.png" alt="Person on a tour"
+                            class="story__img tranform img-height">
+                    </div>
+                </div>
+                <div class="col-1-of-4">
                     <div class="story d-flex-col-1 story-img-second ">
                         <img src="./server/img/komkte logo.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
                 </div>
-                <div class="col-1-of-3">
+                <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
                         <img src="./server/img/RIIB_logo_RGB.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!-- Sponsorlar -->
