--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../server/css/main.css">
     <link rel="shortcut icon" type="image/png" href="./server/img/logo-green-1x.png">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <title>Uşaq hüquqları hakatonu </title>
 </head>
 
@@ -33,10 +33,10 @@
                 </li>
                 <li class="navigation__item"><a href="#4" class="navigation__link" onclick="clickMenu()"> &nbsp;
                         &nbsp;PROQRAM &nbsp; &nbsp; </a></li>
-                <li class="navigation__item"><a href="#15" class="navigation__link" onclick="clickMenu()">Qeydiyyat</a>
+                <li class="navigation__item"><a href="#15" class="navigation__link" onclick="clickMenu()">Qeydİyyat</a>
                 </li>
                 <li class="navigation__item"><a href="#5" class="navigation__link"
-                        onclick="clickMenu()">TƏŞKILATÇILAR</a>
+                        onclick="clickMenu()">TƏŞKİLATÇILAR</a>
                 </li>
                 <!-- <li class="navigation__item"><a href="#6" class="navigation__link" onclick="clickMenu()">SPONSORLAR</a>
                 </li>
@@ -44,8 +44,8 @@
                 </li> -->
                 <li class="navigation__item"><a href="#8" class="navigation__link" onclick="clickMenu()">&nbsp;&nbsp;
                         &nbsp; &nbsp;FAQ &nbsp; &nbsp; &nbsp; &nbsp; </a></li>
-                <!-- <li class="navigation__item"><a href="#9" class="navigation__link" onclick="clickMenu()">Bizimlə
-                        Əlaqə</a></li> -->
+                <li class="navigation__item"><a href="#10" class="navigation__link" onclick="clickMenu()">Bİzİmlə
+                        Əlaqə</a></li>
 
             </ul>
         </nav>
@@ -73,14 +73,12 @@
         <div class="header__text-box">
             <h1 class="heading-primary">
 
-                <span class="heading-primary--main">
+                <span class="heading-primary--main" style="font-weight: 700;">
                     Uşaq Hüquqları Hakatonu
                 </span>
 
-
-                <span class="heading-primary--sub">Hakaton tarixləri: 20-21 noyabr, 2021
-
-                    <span id="15" class="heading-primary--sub"> Son qeydiyyat tarixi:15 sentyabr, 2021</span>
+                <span id="15" class="heading-primary--sub"> Son qeydİyyat tarİxİ:15 sentyabr, 2021</span>
+                <span class="heading-primary--sub">Hakaton tarİxlərİ: 20-21 noyabr, 2021
             </h1>
             <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank"
                 class="btn btn--white btn--animated u-margin-right ">Qeydİyyatdan keç</a>
@@ -158,7 +156,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Məlahət Müştaqova </h3>
                             <p>
-                                Azərbaycan Respublikası Təhsil Nazirliyi , <br> Ümumi təhsildə məzmun, tədris və
+                                Azərbaycan Respublikası Təhsil Nazirliyi, <br>Ümumi təhsildə məzmun, tədris və
                                 qiymətləndirmə şöbəsinin böyük məsləhətçisi
                             </p>
                         </div>
@@ -179,7 +177,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Elnarə Əliyeva </h3>
                             <p>
-                                Azərbaycan Respublikası Gənclər və İdman Nazirliyi , <br> Gənclərlə iş şöbəsinin
+                                Azərbaycan Respublikası Gənclər və İdman Nazirliyi,Gənclərlə iş şöbəsinin
                                 məsləhətçisi
                             </p>
                         </div>
@@ -203,7 +201,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Cəmilə Bağırova </h3>
                             <p>
-                                Azərbaycan Respublikasının Ailə, Qadın və Uşaq Problemləri üzrə Dövlət Komitəsi , <br>
+                                Azərbaycan Respublikasının Ailə, Qadın və Uşaq Problemləri üzrə Dövlət Komitəsi,
                                 Uşaq Problemləri şöbəsinin müdiri
                             </p>
                         </div>
@@ -224,7 +222,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Vüqar Salmanov </h3>
                             <p>
-                                BMT-nın Uşaq Fondunun Azərbaycan Nümayəndəliyi, <br> Uşaq Müdafiəsi proqramının rəhbəri
+                                BMT-nın Uşaq Fondunun Azərbaycan Nümayəndəliyi, Uşaq Müdafiəsi proqramının rəhbəri
                             </p>
                         </div>
                     </div>
@@ -244,10 +242,9 @@
 
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">Nəzrin Quluzadə </h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Nəzrİn Quluzadə </h3>
                             <p>
-                                FemTech platforması , <br>
-                                Təsisçi və icraçı direktor
+                                FemTech platforması, Təsisçi və icraçı direktor
                             </p>
                         </div>
                     </div>
@@ -265,9 +262,9 @@
 
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">Elnarə Əlizadə </h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Elnarə Əlİzadə </h3>
                             <p>
-                                Mars Akademiyası, <br>
+                                Mars Akademiyası, 
                                 Direktor
                             </p>
                         </div>
@@ -290,7 +287,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Aytən Eynalova </h3>
                             <p>
-                                "Birgə və Sağlam" İctimai Birliyi, <br>
+                                "Birgə və Sağlam" İctimai Birliyi, 
                                 Sədr
                             </p>
                         </div>
@@ -310,7 +307,7 @@
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">Kəmalə Aşumova </h3>
                             <p>
-                                "Ümidli Gələcək" Sosial Təşəbbüslər İctimai Birliyi , <br>
+                                "Ümidli Gələcək" Sosial Təşəbbüslər İctimai Birliyi,
                                 İcraçı direktor
                             </p>
                         </div>
@@ -341,24 +338,24 @@
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-compass  "></i>
-                    <h3 class="heading-tertiary ">Uşaq hüquqları üzrə təlimlər</h3>
+                    <h3 class="heading-tertiary ">Uşaq hüquqları üzrə təlİmlər</h3>
                     <p class="feature-box__text">15 sentyabr - 15 oktyabr, 2021</p>
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
-                    <h3 class="heading-tertiary ">Kodlaşdırma, dizayn və idarəetmə təlimlərir
+                    <h3 class="heading-tertiary ">Kodlaşdırma, dİzayn və İdarəetmə təlİmlərİ
                     </h3>
                     <p class="feature-box__text">18 oktyabr - 18 noyabr, 2021</p>
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
                     <h3 class="heading-tertiary ">Komandalarla görüş</h3>
-                    <p class="feature-box__text">19 noyabr, 2021.</p>
+                    <p class="feature-box__text">19 noyabr, 2021</p>
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
                     <h3 class="heading-tertiary ">Hakaton</h3>
-                    <p class="feature-box__text">19-21 noyabr, 2021.</p>
+                    <p class="feature-box__text">20-21 noyabr, 2021</p>
                 </div>
             </div>
         </section>
@@ -368,7 +365,7 @@
 
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary c-white">
-                    Təşkilatçılar
+                    Təşkİlatçılar
                 </h2>
             </div>
             <div class="row">
@@ -532,11 +529,11 @@
 
                     <!-- q1 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbir online yoxsa offline olacaq və hansı
+                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbir onlayn yoxsa oflayn olacaq və hansı
                             platforma üzərindən təşkil olunacaq ? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Tədbir offline formatında, Heydər Əliyev Mərkəzində keçiriləcəkdir.
+                        &nbsp; &#9658; Tədbir oflayn formatında, Heydər Əliyev Mərkəzində keçiriləcəkdir.
                     </p>
                     <br>
                     <!-- q2 -->
@@ -545,17 +542,17 @@
                             keçiriləcəkdir? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Bütün təlimlər online formatda ZOOM üzərindən təşkil olunacaq. Platformların
-                        idarə olunması, vaxtlar və hansı tədbirin harada olacağı barədə öncədən tədbirin facebook
+                        &nbsp; &#9658; Bütün təlimlər onlayn formatda "ZOOM" platforması üzərindən təşkil olunacaq. Platformların
+                        idarə olunması, vaxtlar və hansı tədbirin harada olacağı barədə öncədən tədbirin feysbuk
                         səhifəsində məlumat paylaşılacaq.
                     </p>
                     <br>
                     <!-- q3 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbirdə hansı regionlardan qatılmaq olar? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Tədbirə  hansı regionlardan qatılmaq olar? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Tədbirə bütün ölkədən qatılmaq olar. Lakin tədbir günləri fiziki olaraq tədbirin
+                        &nbsp; &#9658; Tədbirə ölkənin bütün regionlarından qatılmaq olar. Lakin tədbir günləri fiziki olaraq tədbirin
                         keçiriləcəyi məkanda olmaq şərtdir.
                     </p>
                     <br>
@@ -564,7 +561,7 @@
                         <span style='font-size:22px;'>&#8226;</span> <b> Komanda üzvləri kimlər olacaq? </b>
                     </p>
                     <p class="paragraph">
-                        &nbsp; &#9658; Komanda 4 nəfərdən ibarət 10-17 yaş aralığında olan uşaqlardan ibarət olacaqdır.
+                        &nbsp; &#9658; Komanda 4 nəfərdən ibarət 10-16 yaş aralığında olan uşaqlardan ibarət olacaqdır.
 
                     </p>
                     <br>
@@ -598,7 +595,7 @@
                     </p>
                     <p class="paragraph">
                         &nbsp; &#9658; Münsiflər heyətinin qiymətləndirilməsi əsasında seçilmiş birinci yerin qalibi
-                        olan komanda üzvləri kompyuter, ikinci yerin qalibləri planşet, üçüncü yerin qalibləri isə
+                        olan komanda üzvləri kompüter, ikinci yerin qalibləri planşet, üçüncü yerin qalibləri isə
                         ağıllı saat qazanacaqlar. Bundan başqa qalib kimi seçilməyən, lakin maraqlı olan ideya ilə çıxış
                         edən komandalar da müxtəlif hədiyyələrlə təltif olunacaq.
 
@@ -607,7 +604,7 @@
 
                     <!-- q8 -->
                     <p class="paragraph">
-                        <span style='font-size:22px;'>&#8226;</span> <b> Təlim müddətində nə tədris ediləcək?? </b>
+                        <span style='font-size:22px;'>&#8226;</span> <b> Təlim müddətində nə tədris ediləcək?</b>
                     </p>
                     <p class="paragraph">
                         &nbsp; &#9658; İştirakçılar ilkin olaraq uşaq hüquqları üzrə təlimlərə qoşulacaqlar. Növbəti
@@ -621,6 +618,28 @@
             </div>
         </section>
     </main>
+
+    <!-- Proqram -->
+    <section class="section-features" id="10">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary c-dark">
+                Bİzİmlə Əlaqə
+            </h2>
+        </div>
+
+        <div class="row  ">
+
+            <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary " style="text-transform: lowercase;">
+                    <!-- <i class="far fa-envelope-open"></i> -->
+                    info@usaqhakatonu.az</h3>
+                <!-- <p class="feature-box__text">15 avqust - 15 sentyabr, 2021
+                </p> -->
+            </div>
+  
+        </div>
+    </section>
 
 
     <!-- Footer -->
