--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- <img src="./server/img/avropa ittifaqi5.png" alt="Logo" class=" logo-1"> -->
             <!-- <img src="./server/img/EU4GE_Logos-1.png" alt="Logo" class=" logo-2"> -->
             <img src="./server/img/tehsil nazirliyi.png" alt="Logo" class=" logo-3">
-            <img src="./server/img/Gənclər_və_İdman_Nazirliyi_logo.svg.png" alt="Logo" class="logo-4">
+            <img src="./server/img/İdman_Nazirliy_logo.png" alt="Logo" class="logo-4">
             <img src="./server/img/komkte logo.png" alt="Logo" class="logo-7">
             <img src="./server/img/RIIB_logo_RGB.png" alt="Logo" class=" logo-5">
         </div>
@@ -144,7 +144,7 @@
                 <div class="col-1-of-2">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="./server/img/Məlahət Müştaqova.jpg" alt="Person on a tour" class="story__img">
+                            <img src="./server/img/melahet.jpg" alt="Person on a tour" class="story__img">
                             <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/tariyelaghazada/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
@@ -189,7 +189,7 @@
                 <div class="col-1-of-2">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="./server/img/Cəmilə Bağırova.jpg" alt="Person on a tour" class="story__img">
+                            <img src="./server/img/cemile.jpg" alt="Person on a tour" class="story__img">
                             <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/tariyelaghazada/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
@@ -210,7 +210,7 @@
                 <div class="col-1-of-2">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="./server/img/Vüqar Salmanov.jpg" alt="Person on a tour" class="story__img">
+                            <img src="./server/img/vuqar.jpg" alt="Person on a tour" class="story__img">
                             <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/tariyelaghazada/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
@@ -296,7 +296,7 @@
                 <div class="col-1-of-2">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="./server/img/Kəmalə Aşumova.jpg" alt="Person on a tour" class="story__img">
+                            <img src="./server/img/kamala.jpg" alt="Person on a tour" class="story__img">
                             <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/elnara-alizada-6b1396b2/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
@@ -380,7 +380,7 @@
           
                 <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
-                        <img src="./server/img/Gənclər_və_İdman_Nazirliyi_logo.svg.png" alt="Person on a tour"
+                        <img src="./server/img/İdman_Nazirliy_logo.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
                 </div>
