--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="header__logo-box-1">
             <!-- <img src="./server/img/avropa ittifaqi5.png" alt="Logo" class=" logo-1"> -->
             <!-- <img src="./server/img/EU4GE_Logos-1.png" alt="Logo" class=" logo-2"> -->
-            <img src="./server/img/tehsil nazirliyi.png" alt="Logo" class=" logo-3">
-            <img src="./server/img/İdman_Nazirliy_logo.png" alt="Logo" class="logo-4">
+            <img src="./server/img/tehsil-nazirliyi.png" alt="Logo" class=" logo-3">
+            <img src="./server/img/nazirlik-logo.png" alt="Logo" class="logo-4">
             <img src="./server/img/komkte logo.png" alt="Logo" class="logo-7">
             <img src="./server/img/RIIB_logo_RGB.png" alt="Logo" class=" logo-5">
         </div>
@@ -175,10 +175,10 @@
 
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">Elnarə Əliyeva </h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Elnarə Əlİyeva </h3>
                             <p>
                                 Azərbaycan Respublikası Gənclər və İdman Nazirliyi,Gənclərlə iş şöbəsinin
-                                məsləhətçisi
+                                məsləhətçisis
                             </p>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
 
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">Cəmilə Bağırova </h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Cəmİlə Bağırova </h3>
                             <p>
                                 Azərbaycan Respublikasının Ailə, Qadın və Uşaq Problemləri üzrə Dövlət Komitəsi,
                                 Uşaq Problemləri şöbəsinin müdiri
@@ -233,12 +233,12 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="./server/img/Nəzrin Əsgərzadə.jpg" alt="Person on a tour" class="story__img">
-                            <figcaption class="story__caption">
+                            <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/nazringuluzade/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
                                     <img src="./server/img/iconlinkedin.png" width='60' class="iconLinkedin" alt="">
                                 </a>
-                            </figcaption>
+                            </figcaption> -->
 
                         </figure>
                         <div class="story__text">
@@ -253,12 +253,12 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="./server/img/Elnarə Əlizadə.jpg" alt="Person on a tour" class="story__img">
-                            <figcaption class="story__caption">
+                            <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/elnara-alizada-6b1396b2/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
                                     <img src="./server/img/iconlinkedin.png" width='60' class="iconLinkedin" alt="">
                                 </a>
-                            </figcaption>
+                            </figcaption> -->
 
                         </figure>
                         <div class="story__text">
@@ -276,12 +276,12 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="./server/img/Aytən Eynalova.JPG" alt="Person on a tour" class="story__img">
-                            <figcaption class="story__caption">
+                            <!-- <figcaption class="story__caption">
                                 <a href="https://www.linkedin.com/in/ayten-eynalova-1b9799112/" target="_blank"
                                     class="iconLinkedinLink" class="iconLinkedinLink">
                                     <img src="./server/img/iconlinkedin.png" width='60' class="iconLinkedin" alt="">
                                 </a>
-                            </figcaption>
+                            </figcaption> -->
 
                         </figure>
                         <div class="story__text">
@@ -373,14 +373,14 @@
 
                 <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
-                        <img src="./server/img/tehsil nazirliyi.png" alt="Person on a tour" class="story__img tranform">
+                        <img src="./server/img/tehsil-nazirliyi.png" alt="Person on a tour" class="story__img tranform">
                     </div>
                 </div>
 
           
                 <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
-                        <img src="./server/img/İdman_Nazirliy_logo.png" alt="Person on a tour"
+                        <img src="./server/img/nazirlik-logo.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
                 </div>
