--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             <!-- <img src="./server/img/avropa ittifaqi5.png" alt="Logo" class=" logo-1"> -->
             <!-- <img src="./server/img/EU4GE_Logos-1.png" alt="Logo" class=" logo-2"> -->
             <img src="./server/img/tehsil-nazirliyi.png" alt="Logo" class=" logo-3">
-            <img src="./server/img/nazirlik-logo.png" alt="Logo" class="logo-4">
+            <!-- <img src="./server/img/nazirlik-logo.png" alt="Logo" class="logo-4"> -->
             <img src="./server/img/komkte logo.png" alt="Logo" class="logo-7">
+            <img src="./server/img/unicef.png" alt="Logo" class="logo-3">
             <img src="./server/img/RIIB_logo_RGB.png" alt="Logo" class=" logo-5">
         </div>
         <!-- <div class="header__logo-box">
@@ -81,8 +82,8 @@
                 <span id="15" class="heading-primary--sub"> Son qeydİyyat tarİxİ:20 sentyabr, 2021</span>
                 <span class="heading-primary--sub">Hakaton tarİxlərİ: 20-21 noyabr, 2021
             </h1>
-            <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank"
-                class="btn btn--white btn--animated u-margin-right ">Qeydİyyatdan keç</a>
+            <!-- <a href="https://forms.gle/Q1rbmmErtttf8Myo8" target="_blank"
+                class="btn btn--white btn--animated u-margin-right ">Qeydİyyatdan keç</a> -->
         </div>
 
     </header>
@@ -329,7 +330,6 @@
                     Proqram
                 </h2>
             </div>
-
             <div class="row  ">
 
                 <div class="feature-box">
@@ -341,7 +341,7 @@
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-compass  "></i>
                     <h3 class="heading-tertiary ">Uşaq hüquqları üzrə təlİmlər</h3>
-                    <p class="feature-box__text">20 sentyabr - 15 oktyabr, 2021</p>
+                    <p class="feature-box__text">14 oktyabr - 17 oktyabr, 2021</p>
                 </div>
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
@@ -380,15 +380,22 @@
                 </div>
 
 
-                <div class="col-1-of-4">
+                <!-- <div class="col-1-of-4">
                     <div class="story d-flex-col-1 ">
                         <img src="./server/img/nazirlik-logo.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
-                </div>
+                </div> -->
                 <div class="col-1-of-4">
                     <div class="story d-flex-col-1 story-img-second ">
                         <img src="./server/img/komkte logo.png" alt="Person on a tour"
+                            class="story__img tranform img-height">
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="story d-flex-col-1 ">
+                        <img src="./server/img/unicef.png" alt="Person on a tour"
                             class="story__img tranform img-height">
                     </div>
                 </div>
